--- a/MiniProject/test-output/old/Suite/methods.html
+++ b/MiniProject/test-output/old/Suite/methods.html
@@ -1,50 +1,50 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fecaa4">  <td>25/04/22 22:29:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProjectSpecificMethods.preCondition()[pri:0, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">&gt;&gt;preCondition</td> 
-<td>&nbsp;</td>  <td>TestNG-test=ParallelTests-1@848646326</td>   <td></td> </tr>
-<tr bgcolor="9aa2f7">  <td>25/04/22 22:28:32</td>   <td>-47650</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Reporter.startTestCase()[pri:0, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">&gt;&gt;startTestCase</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=ParallelTests-1@848646326</td>   <td></td> </tr>
-<tr bgcolor="fecaa4">  <td>25/04/22 22:28:59</td>   <td>-20010</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProjectSpecificMethods.postCondition()[pri:0, instance:com.orangehrm.testcases.TC001_SelectUser@1c742ed4]">&lt;&lt;postCondition</td> 
-<td>&nbsp;</td>  <td>TestNG-test=ParallelTests-2@1547201924</td>   <td></td> </tr>
-<tr bgcolor="d2a27f">  <td>25/04/22 22:29:11</td>   <td>-8584</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchUser.searchUserRole()[pri:2, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">searchUserRole</td> 
-  <td>TestNG-test=ParallelTests-1@848646326</td>   <td></td> </tr>
-<tr bgcolor="d2a27f">  <td>25/04/22 22:28:32</td>   <td>-47855</td> <td>&nbsp;</td><td title="&gt;&gt;SearchUser.setValues()[pri:0, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">&gt;&gt;setValues</td> 
+<tr bgcolor="e3bcd9">  <td>25/04/24 18:55:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.orangehrm.testcases.TC001_SelectUser@1c742ed4]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=ParallelTests-2@848646326</td>   <td></td> </tr>
+<tr bgcolor="9aa2f7">  <td>25/04/24 18:55:51</td>   <td>439</td> <td title="&lt;&lt;Reporter.endResult()[pri:0, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">&lt;&lt;endResult</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1096485705</td>   <td></td> </tr>
+<tr bgcolor="fecaa4">  <td>25/04/24 18:55:51</td>   <td>262</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProjectSpecificMethods.postCondition()[pri:0, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">&lt;&lt;postCondition</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="e3bcd9">  <td>25/04/24 18:55:49</td>   <td>-1529</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=ParallelTests-1@2113374708</td>   <td></td> </tr>
+<tr bgcolor="d2a27f">  <td>25/04/24 18:55:49</td>   <td>-1551</td> <td>&nbsp;</td><td title="&gt;&gt;SearchUser.setValues()[pri:0, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">&gt;&gt;setValues</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1096485705</td>   <td></td> </tr>
-<tr bgcolor="e3bcd9">  <td>25/04/22 22:29:36</td>   <td>16555</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=ParallelTests-1@848646326</td>   <td></td> </tr>
-<tr bgcolor="fecaa4">  <td>25/04/22 22:29:36</td>   <td>16468</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProjectSpecificMethods.postCondition()[pri:0, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">&lt;&lt;postCondition</td> 
-<td>&nbsp;</td>  <td>TestNG-test=ParallelTests-1@848646326</td>   <td></td> </tr>
-<tr bgcolor="d2a27f">  <td>25/04/22 22:29:28</td>   <td>8072</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchUser.searchEnabledUsers()[pri:3, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">searchEnabledUsers</td> 
-  <td>TestNG-test=ParallelTests-1@848646326</td>   <td></td> </tr>
-<tr bgcolor="a5b8a8">  <td>25/04/22 22:28:32</td>   <td>-47855</td> <td>&nbsp;</td><td title="&gt;&gt;TC001_SelectUser.setValues()[pri:0, instance:com.orangehrm.testcases.TC001_SelectUser@1c742ed4]">&gt;&gt;setValues</td> 
+<tr bgcolor="a5b8a8">  <td>25/04/24 18:55:50</td>   <td>-24</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_SelectUser.selectUser()[pri:0, instance:com.orangehrm.testcases.TC001_SelectUser@1c742ed4]">selectUser</td> 
+  <td>TestNG-test=ParallelTests-2@848646326</td>   <td></td> </tr>
+<tr bgcolor="fecaa4">  <td>25/04/24 18:55:51</td>   <td>245</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProjectSpecificMethods.preCondition()[pri:0, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">&gt;&gt;preCondition</td> 
+<td>&nbsp;</td>  <td>TestNG-test=ParallelTests-1@2113374708</td>   <td></td> </tr>
+<tr bgcolor="fecaa4">  <td>25/04/24 18:55:50</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProjectSpecificMethods.postCondition()[pri:0, instance:com.orangehrm.testcases.TC001_SelectUser@1c742ed4]">&lt;&lt;postCondition</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="fecaa4">  <td>25/04/24 18:55:51</td>   <td>245</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProjectSpecificMethods.preCondition()[pri:0, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">&gt;&gt;preCondition</td> 
+<td>&nbsp;</td>  <td>TestNG-test=ParallelTests-1@2113374708</td>   <td></td> </tr>
+<tr bgcolor="e3bcd9">  <td>25/04/24 18:55:51</td>   <td>263</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=ParallelTests-1@2113374708</td>   <td></td> </tr>
+<tr bgcolor="9aa2f7">  <td>25/04/24 18:55:49</td>   <td>-1331</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Reporter.startTestCase()[pri:0, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">&gt;&gt;startTestCase</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=ParallelTests-1@2113374708</td>   <td></td> </tr>
+<tr bgcolor="a5b8a8">  <td>25/04/24 18:55:49</td>   <td>-1551</td> <td>&nbsp;</td><td title="&gt;&gt;TC001_SelectUser.setValues()[pri:0, instance:com.orangehrm.testcases.TC001_SelectUser@1c742ed4]">&gt;&gt;setValues</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1096485705</td>   <td></td> </tr>
-<tr bgcolor="e3bcd9">  <td>25/04/22 22:28:32</td>   <td>-47836</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=ParallelTests-1@848646326</td>   <td></td> </tr>
-<tr bgcolor="9aa2f7">  <td>25/04/22 22:28:32</td>   <td>-47650</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Reporter.startTestCase()[pri:0, instance:com.orangehrm.testcases.TC001_SelectUser@1c742ed4]">&gt;&gt;startTestCase</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=ParallelTests-2@1547201924</td>   <td></td> </tr>
-<tr bgcolor="e3bcd9">  <td>25/04/22 22:29:00</td>   <td>-19840</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.orangehrm.testcases.TC001_SelectUser@1c742ed4]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=ParallelTests-2@1547201924</td>   <td></td> </tr>
-<tr bgcolor="fecaa4">  <td>25/04/22 22:29:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProjectSpecificMethods.preCondition()[pri:0, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">&gt;&gt;preCondition</td> 
-<td>&nbsp;</td>  <td>TestNG-test=ParallelTests-1@848646326</td>   <td></td> </tr>
-<tr bgcolor="fecaa4">  <td>25/04/22 22:29:36</td>   <td>16468</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProjectSpecificMethods.postCondition()[pri:0, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">&lt;&lt;postCondition</td> 
-<td>&nbsp;</td>  <td>TestNG-test=ParallelTests-1@848646326</td>   <td></td> </tr>
-<tr bgcolor="fecaa4">  <td>25/04/22 22:28:32</td>   <td>-47858</td> <td title="&gt;&gt;ProjectSpecificMethods.getConfigProperties()[pri:0, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">&gt;&gt;getConfigProperties</td> 
+<tr bgcolor="d2a27f">  <td>25/04/24 18:55:51</td>   <td>246</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchUser.searchEnabledUsers()[pri:3, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">searchEnabledUsers</td> 
+  <td>TestNG-test=ParallelTests-1@2113374708</td>   <td></td> </tr>
+<tr bgcolor="fecaa4">  <td>25/04/24 18:55:51</td>   <td>262</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProjectSpecificMethods.postCondition()[pri:0, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">&lt;&lt;postCondition</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="d2a27f">  <td>25/04/24 18:55:50</td>   <td>128</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchUser.searchUser()[pri:1, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">searchUser</td> 
+  <td>TestNG-test=ParallelTests-1@2113374708</td>   <td></td> </tr>
+<tr bgcolor="e3bcd9">  <td>25/04/24 18:55:49</td>   <td>-1529</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:com.orangehrm.testcases.TC001_SelectUser@1c742ed4]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=ParallelTests-2@848646326</td>   <td></td> </tr>
+<tr bgcolor="9aa2f7">  <td>25/04/24 18:55:49</td>   <td>-1331</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Reporter.startTestCase()[pri:0, instance:com.orangehrm.testcases.TC001_SelectUser@1c742ed4]">&gt;&gt;startTestCase</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=ParallelTests-2@848646326</td>   <td></td> </tr>
+<tr bgcolor="fecaa4">  <td>25/04/24 18:55:49</td>   <td>-1308</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProjectSpecificMethods.preCondition()[pri:0, instance:com.orangehrm.testcases.TC001_SelectUser@1c742ed4]">&gt;&gt;preCondition</td> 
+<td>&nbsp;</td>  <td>TestNG-test=ParallelTests-2@848646326</td>   <td></td> </tr>
+<tr bgcolor="d2a27f">  <td>25/04/24 18:55:50</td>   <td>144</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchUser.searchUserRole()[pri:2, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">searchUserRole</td> 
+  <td>TestNG-test=ParallelTests-1@2113374708</td>   <td></td> </tr>
+<tr bgcolor="fecaa4">  <td>25/04/24 18:55:49</td>   <td>-1554</td> <td title="&gt;&gt;ProjectSpecificMethods.getConfigProperties()[pri:0, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">&gt;&gt;getConfigProperties</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1096485705</td>   <td></td> </tr>
-<tr bgcolor="fecaa4">  <td>25/04/22 22:29:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProjectSpecificMethods.preCondition()[pri:0, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">&gt;&gt;preCondition</td> 
-<td>&nbsp;</td>  <td>TestNG-test=ParallelTests-1@848646326</td>   <td></td> </tr>
-<tr bgcolor="9aa2f7">  <td>25/04/22 22:28:31</td>   <td>-48051</td> <td title="&gt;&gt;Reporter.startReport()[pri:0, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">&gt;&gt;startReport</td> 
+<tr bgcolor="9aa2f7">  <td>25/04/24 18:55:49</td>   <td>-1740</td> <td title="&gt;&gt;Reporter.startReport()[pri:0, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">&gt;&gt;startReport</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1096485705</td>   <td></td> </tr>
-<tr bgcolor="9aa2f7">  <td>25/04/22 22:29:36</td>   <td>16646</td> <td title="&lt;&lt;Reporter.endResult()[pri:0, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">&lt;&lt;endResult</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1096485705</td>   <td></td> </tr>
-<tr bgcolor="fecaa4">  <td>25/04/22 22:29:36</td>   <td>16468</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProjectSpecificMethods.postCondition()[pri:0, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">&lt;&lt;postCondition</td> 
-<td>&nbsp;</td>  <td>TestNG-test=ParallelTests-1@848646326</td>   <td></td> </tr>
-<tr bgcolor="e3bcd9">  <td>25/04/22 22:28:32</td>   <td>-47837</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:com.orangehrm.testcases.TC001_SelectUser@1c742ed4]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=ParallelTests-2@1547201924</td>   <td></td> </tr>
-<tr bgcolor="a5b8a8">  <td>25/04/22 22:28:50</td>   <td>-29723</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_SelectUser.selectUser()[pri:0, instance:com.orangehrm.testcases.TC001_SelectUser@1c742ed4]">selectUser</td> 
-  <td>TestNG-test=ParallelTests-2@1547201924</td>   <td></td> </tr>
-<tr bgcolor="fecaa4">  <td>25/04/22 22:28:32</td>   <td>-47635</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProjectSpecificMethods.preCondition()[pri:0, instance:com.orangehrm.testcases.TC001_SelectUser@1c742ed4]">&gt;&gt;preCondition</td> 
-<td>&nbsp;</td>  <td>TestNG-test=ParallelTests-2@1547201924</td>   <td></td> </tr>
-<tr bgcolor="d2a27f">  <td>25/04/22 22:28:50</td>   <td>-29718</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchUser.searchUser()[pri:1, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">searchUser</td> 
-  <td>TestNG-test=ParallelTests-1@848646326</td>   <td></td> </tr>
+<tr bgcolor="fecaa4">  <td>25/04/24 18:55:51</td>   <td>245</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProjectSpecificMethods.preCondition()[pri:0, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">&gt;&gt;preCondition</td> 
+<td>&nbsp;</td>  <td>TestNG-test=ParallelTests-1@2113374708</td>   <td></td> </tr>
+<tr bgcolor="fecaa4">  <td>25/04/24 18:55:51</td>   <td>262</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProjectSpecificMethods.postCondition()[pri:0, instance:com.orangehrm.testcases.SearchUser@4b8d604b]">&lt;&lt;postCondition</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
 </table>
